# router/purchasePreset.go
@@ -2,15 +2,15 @@ package router
 
 import (
 	"github.com/gin-gonic/gin"
-	purchaseDi "github.com/hifat/mallow-sale-api/internal/purchase/di"
+	purchasePresetDi "github.com/hifat/mallow-sale-api/internal/purchase/preset/di"
 	"github.com/hifat/mallow-sale-api/pkg/config"
 	"go.mongodb.org/mongo-driver/mongo"
 )
 
 func PurchasePresetRouter(r *gin.RouterGroup, cfg *config.Config, db *mongo.Database) {
-	handler := purchaseDi.Init(cfg, db)
+	handler := purchasePresetDi.Init(cfg, db)
 
-	r.Group("/purchases").
+	r.Group("/purchase-presets").
 		GET("", handler.Rest.Find).
 		GET(":id", handler.Rest.FindByID).
 		POST("", handler.Rest.Create).
